// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emulate filter 1`] = `
EventsList(
  0: 1
  20: 1
)
`;

exports[`emulate map 1`] = `
EventsList(
  10: 2
)
`;

exports[`emulate order of simultaneous values 1`] = `
EventsList(
  10: 1
  10: 2
)
`;

exports[`emulate unsubscribe 1`] = `
EventsList(
  10: 1
)
`;

exports[`emulate unsubscribe doesn't remove other values with same cb 1`] = `
EventsList(
  10: 1
  10: 1
  20: 0
)
`;
